deploy/backend/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rinha-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rinha-backend
  template:
    metadata:
      name: rinha-backend
      labels:
        app: rinha-backend
    spec:
      containers:
      - name: rinha-backend
        image: braganathan38/rinhabackend-softplan:1.0
        ports:
        - containerPort: 8080
---
